Revision history for Dancer

NEXT

    [ ENHANCEMENTS ]
    * environment configs are now merged with the global config, versus
        the previous behavior that was overriding the whole config
        segments. (GH#1016, Yanick Champoux)
    * Dancer::Handler::Debug now accepts env variables from the command-line.
        (GH#1056, Yanick Champoux)

    [ BUG FIXES ]
    * Test was using deprecated 'import_warnings'. (GH#1045, mokko)
    * Fix default test names for headers and redirection test methods.
      (GH#1048, odyniec)

    [ DOCUMENTATION ]
    * Correct POD formatting for HTTP methods in introduction.pod.
        (GH#1047, Lx)

1.3126 2014-07-14

    [ BUG FIXES ]
    * Bunch of files were not in the MANIFEST.

1.3125 2014-07-12

    [ ENHANCEMENT ]
    * Skip bad cookie definitions. (GH#1036, Manuel Weiss)
    * 'dancer' script warns and die if trying to create 
        an app with the same name of an existing module.
            (GH#1038, Racke)
    * In Dancer::Logger::Abstract, default host
        name to '-' if not available. (GH#1029, John Wittkoski)
    * Add Dancer::Serializer::JSONP. (GH#1035, David Zurborg)

    [ DOCUMENTATION ]
    * Improve the wording of the params() section in Dancer.
        (GH#1025, Warren Young)
    * Explain how to access config in Dancer::Config's POD. 
        (GH#1026, Gabor Szabo)
    * Cookbook typo fix. (GH#1031, Florian Sojer)

1.3124 2014-05-09

    [ ENHANCEMENTS ]
    * Also check X-Forwarded-Proto. (GH#1015, Andy Jones)
    * Update bundle jQuery to v1.11.0. (GH#1018, Michal Wojciechowski)
    * Add session support to the skeleton config. (GH#1008. Gabor Szabo)

    [ BUG FIXES ]
    * Remove print statement in Dancer::ModuleLoad::require. 
        (GH#1021, John Wittkoski)
    * Test was failing if JSON module was absent. 
        (GH#1022, Yanick Champoux)
    * Allow for routes evaluating to false ('0', '', etc). 
        (GH#1020, Yanick Champoux)

    [DOCUMENTATION]